--- a/src/views/admin/oficinas/index.ejs
+++ b/src/views/admin/oficinas/index.ejs
@@ -260,7 +260,7 @@
           cell.classList.add("w-4")
           cell.innerHTML = `<div class="align-items-center py-1">
             <span class="avatar avatar-rounded bg-green-lt">
-              <h6>${element.CODOFI}</h6>
+              <h6>${element.IDOFIC}</h6>
             </span>
           </div>`
           row.appendChild(cell)
@@ -274,7 +274,7 @@
           </div>`
           row.appendChild(cell)
 
-          // col9
+          // col3
           cell = document.createElement('td')
           cell.classList.add("w-4")
           cell.innerHTML = `<ul class="dots-menu">
