se permite introducir importe hito negativo

--- a/src/views/admin/fraudes/hitos/add.ejs
+++ b/src/views/admin/fraudes/hitos/add.ejs
@@ -202,7 +202,7 @@
     const gSan = document.querySelector('#gensan');
 
     input.addEventListener('input', (e) => {
-      e.target.value = e.target.value.replace(/[^0-9 \,.]/, '').replace(/[.]/g, ',')
+      e.target.value = e.target.value.replace(/[^0-9 \,.-]/, '').replace(/[.]/g, ',')
     });
     gLiq.addEventListener('change', (e) => {
       e.target.value = e.target.checked ? 1:0
