--- a/src/views/user/perfil.ejs
+++ b/src/views/user/perfil.ejs
@@ -9,134 +9,128 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../partials/header') %>
       <div class="page-wrapper">
         <div class="page-body">
           <div class="container-xl">
-            <div id="tabs">
-              <input type="radio" id="tab1" name="tabs" checked>
-              <label for="tab1">Perfil de usuario</label>
-              <input type="radio" id="tab2" name="tabs">
-              <label for="tab2">Cambiar contraseña</label>
-              <input type="radio" id="tab3" name="tabs">
-              <label for="tab3">Actualizar recurso</label>
-              <div class="contents border-top-wide">
-                <div id="tabContent1">
-                  <div class="card">
-                    <div class="card-header d-inline-block">
-                      <h3 class="card-title">Perfil</h3>
-                    </div>
-                    <form action="/user/perfil" method="POST" onsubmit="return validate();">
-                      <input type="hidden" name="idusua" id="idusua" value="<%- datos.usuario.IDUSUA %>">
-                      <div class="card-body">
-                        <div class="row">
-                          <div class="col-2">
-                            <div class="mb-1">
-                              <label class="form-label">UserID</label>
-                              <input type="text" name="userid" id="userid" class="form-control"
-                                style="text-transform: lowercase;" value="<%- datos.usuario.USERID %>" readonly />
-                            </div>
-                          </div>
-                          <div class="col-10">
-                            <div class="mb-1">
-                              <div class="input-control">
-                                <label class="form-label required">Nombre</label>
-                                <input type="text" name="nomusu" id="nomusu" class="form-control"
-                                  style="text-transform: uppercase;" value="<%- datos.usuario.NOMUSU %>" autofocus />
-                                <div class="invalid-feedback"></div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-10">
-                            <div class="mb-1">
-                              <div class="input-control">
-                                <label class="form-label required">Correo electrónico</label>
-                                <input type="text" name="emausu" id="emausu" class="form-control"
-                                  value="<%- datos.usuario.EMAUSU %>" />
-                                <div class="invalid-feedback"></div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-2">
-                            <div class="mb-1">
-                              <div class="input-control">
-                                <label class="form-label required">Teléfono</label>
-                                <input type="text" name="telusu" id="telusu" class="form-control"
-                                  value="<%- datos.usuario.TELUSU %>" />
-                                <div class="invalid-feedback"></div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
+            <div class="card">
+              <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs" data-bs-toggle="tabs" role="presentation">
+                  <li class="nav-item" role="presentation">
+                    <a href="#tabs-perfil" class="nav-link active" data-bs-toggle="tab" aria-selected="true" role="tab">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon me-2" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"></path><path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path></svg>
+                      Perfil de usuario
+                    </a>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <a href="#tabs-password" class="nav-link" data-bs-toggle="tab" aria-selected="false" tabindex="-1" role="tab">
+                      <svg  xmlns="http://www.w3.org/2000/svg" class="icon me-2" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M16.555 3.843l3.602 3.602a2.877 2.877 0 0 1 0 4.069l-2.643 2.643a2.877 2.877 0 0 1 -4.069 0l-.301 -.301l-6.558 6.558a2 2 0 0 1 -1.239 .578l-.175 .008h-1.172a1 1 0 0 1 -.993 -.883l-.007 -.117v-1.172a2 2 0 0 1 .467 -1.284l.119 -.13l.414 -.414h2v-2h2v-2l2.144 -2.144l-.301 -.301a2.877 2.877 0 0 1 0 -4.069l2.643 -2.643a2.877 2.877 0 0 1 4.069 0z" /><path d="M15 9h.01" /></svg>
+                      Cambiar contraseña
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-body">
+                <div class="tab-content">
+                  <div class="tab-pane active show" id="tabs-perfil" role="tabpanel">
+                    <div class="card">
+                      <div class="card-header d-inline-block">
+                        <h3 class="card-title">Usuario</h3>
                       </div>
-                      <div class="card-footer text-end">
-                        <div class="d-flex">
-                          <input class="btn btn-white" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Cancelar" />
-                          <button type="submit" class="btn btn-success ms-auto">Actualizar perfil</button>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <div id="tabContent2">
-                  <div class="row">
-                    <div class="col-3"></div>
-                    <div class="col-6">
-                      <div class="card">
-                        <div class="card-header d-inline-block">
-                          <h3 class="card-title">Cambio de contraseña</h3>
-                          <p class="subtitulo text-muted">
-                            Aviso: La actualización de la contraseña de usuario implica la finalización de la actual
-                            sesión.
-                          </p>
-                        </div>
-                        <form action="/user/cambio" method="POST">
+                      <div class="card-body p-0">
+                        <form action="/user/perfil/update" method="POST" onsubmit="return validate();">
                           <input type="hidden" name="idusua" id="idusua" value="<%- datos.usuario.IDUSUA %>">
+                          <input type="hidden" name="perusu" id="perusu" value="<%- datos.usuario.PERUSU %>">
+                          <input type="hidden" name="stausu" id="stausu" value="<%- datos.usuario.STAUSU %>">
+                          <div class="card-body">
+                            <div class="row">
+                              <div class="col-2">
+                                <div class="mb-1">
+                                  <label class="form-label">UserID</label>
+                                  <input type="text" name="userid" id="userid" class="form-control"
+                                    style="text-transform: lowercase;" value="<%- datos.usuario.USERID %>" readonly />
+                                </div>
+                              </div>
+                              <div class="col-10">
+                                <div class="mb-1">
+                                  <div class="input-control">
+                                    <label class="form-label required">Nombre</label>
+                                    <input type="text" name="nomusu" id="nomusu" class="form-control"
+                                      style="text-transform: uppercase;" value="<%- datos.usuario.NOMUSU %>" autofocus />
+                                    <div class="invalid-feedback"></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col-10">
+                                <div class="mb-1">
+                                  <div class="input-control">
+                                    <label class="form-label required">Correo electrónico</label>
+                                    <input type="text" name="emausu" id="emausu" class="form-control"
+                                      value="<%- datos.usuario.EMAUSU %>" />
+                                    <div class="invalid-feedback"></div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-2">
+                                <div class="mb-1">
+                                  <div class="input-control">
+                                    <label class="form-label required">Teléfono</label>
+                                    <input type="text" name="telusu" id="telusu" class="form-control"
+                                      value="<%- datos.usuario.TELUSU %>" />
+                                    <div class="invalid-feedback"></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                           <div class="card-footer text-end">
                             <div class="d-flex">
-                              <a href="/user/perfil/<%- datos.usuario.USERID %>" class="btn btn-white">Cancelar</a>
-                              <button type="submit" class="btn btn-success ms-auto" id="btnPassword">
-                                Cambiar contraseña
-                              </button>
+                              <a id="back-link" class="btn btn-white">Cancelar</a>
+                              <button type="submit" class="btn btn-primary ms-auto">Actualizar perfil</button>
                             </div>
                           </div>
                         </form>
                       </div>
                     </div>
-                    <div class="col-3"></div>
                   </div>
-                </div>
-                <div id="tabContent3">
-                  <div class="row">
-                    <div class="col-3"></div>
-                    <div class="col-6">
-                      <div class="card">
-                        <div class="card-header d-inline-block">
-                          <h3 class="card-title">Actualizar recurso</h3>
-                          <p class="subtitulo text-muted">
-                            Aviso: La actualización del recurso implica la finalización de la actual sesión.
-                          </p>
-                        </div>
-                        <form action="/user/actualizar" method="POST">
-                          <input type="hidden" name="idusua" id="idusua" value="<%- datos.usuario.IDUSUA %>">
-                          <div class="card-footer text-end">
-                            <div class="d-flex">
-                              <a href="/user/perfil/<%- datos.usuario.USERID %>" class="btn btn-white">Cancelar</a>
-                              <button type="submit" class="btn btn-success ms-auto" id="btnPassword">
-                                Actualizar recurso
-                              </button>
-                            </div>
-                          </div>
-                        </form>
+                  <div class="tab-pane" id="tabs-password" role="tabpanel">
+                    <div class="card">
+                      <div class="card-header d-inline-block">
+                        <h3 class="card-title">Cambio de contraseña</h3>
+                        <p class="subtitulo text-muted">
+                          Aviso: La actualización de la contraseña de usuario implica la finalización de la actual
+                          sesión.
+                        </p>
                       </div>
+                      <form action="/user/cambio" method="POST" onsubmit="return validate();">
+                        <input type="hidden" name="idusua" id="idusua" value="<%- datos.usuario.IDUSUA %>">
+                        <div class="card-footer text-end">
+                          <div class="d-flex">
+                            <a id="back-link-1" class="btn btn-white">Cancelar</a>
+                            <button type="submit" class="btn btn-primary ms-auto" id="btnPassword">
+                              Cambiar contraseña
+                            </button>
+                          </div>
+                        </div>
+                      </form>
                     </div>
-                    <div class="col-3"></div>
                   </div>
                 </div>
               </div>
@@ -147,8 +141,16 @@
       <%- include('../partials/footer') %>
   </div>
 
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/user/perfil.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/user/perfil.js"></script>
+  <script>
+    const element = document.getElementById('back-link');
+    element.setAttribute('href', document.referrer)
+  </script>
+  <script>
+    const element1 = document.getElementById('back-link-1');
+    element1.setAttribute('href', document.referrer)
+  </script>
 </body>
 
 </html>
