--- a/src/views/admin/estadisticas/index.ejs
+++ b/src/views/admin/estadisticas/index.ejs
@@ -9,13 +9,38 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../partials/header') %>
     <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
     <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Formularios
+              </div>
+              <h2 class="page-title">
+                Estadísticas
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="page-body">
         <div class="container-xl">
           <div class="row">
@@ -23,9 +48,6 @@
               <div class="card mt-3">
                 <form action="/admin/estadisticas" method="POST" onsubmit="return validate();">
                   <input type="hidden" id="refdoc" name="refdoc">
-                  <div class="card-header">
-                    <h3 class="card-title">Estadísticas</h3>
-                  </div>
                   <div class="card-body">
                     <div class="row">
                       <div class="col-6">
@@ -68,7 +90,7 @@
                   </div>
                   <div class="card-footer text-end">
                     <div class="d-flex">
-                      <button type="submit" class="btn btn-success ms-auto">Generar estadística</button>
+                      <button type="submit" class="btn btn-primary ms-auto">Generar estadística</button>
                     </div>
                   </div>
                 </form>
@@ -77,12 +99,12 @@
           </div>
         </div>
       </div>
+      <%- include('../../partials/footer') %>
     </div>
-    <%- include('../../partials/footer') %>
   </div>
 
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/indexStats.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/estadisticas/index.js"></script>
 </body>
 
 </html>
