--- a/src/views/admin/estadisticas/resultado.ejs
+++ b/src/views/admin/estadisticas/resultado.ejs
@@ -9,6 +9,19 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/table.css">
+  <link rel="stylesheet" href="/css/modal.css">
   <!-- apexcharts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.3/apexcharts.min.js"></script>
   <script src="/js/easypiechart.min.js"></script>
@@ -62,25 +75,41 @@
   </style>
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../partials/header') %>
     <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
     <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Periodo: <%- datos.periodo.DESDE.split('-').reverse().join('/') %> al <%- datos.periodo.HASTA.split('-').reverse().join('/') %>
+              </div>
+              <div class="page-pretitle">
+                Referencia: <%- datos.formulario.REFFOR %>
+              </div>
+              <h2 class="page-title">
+                Estadísticas
+              </h2>
+            </div>
+            <div class="col-auto ms-auto d-print-none">
+                <div class="btn-list">
+                  <a href="#" class="btn btn-primary d-none d-sm-inline-block" data-bs-toggle="modal" data-bs-target="#modal-report">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 5l0 14"></path><path d="M5 12l14 0"></path></svg>
+                    Nueva Consulta
+                  </a>
+                  <a href="#" class="btn btn-primary d-sm-none btn-icon" data-bs-toggle="modal" data-bs-target="#modal-report" aria-label="Create new report">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 5l0 14"></path><path d="M5 12l14 0"></path></svg>                    
+                  </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="page-body">
         <div class="container-xl">
-          <div class="d-flex">
-            <span>Referencia: <%- datos.formulario.REFFOR %></span>
-            <span class="ms-3">Periodo: <%- datos.periodo.DESDE.split('-').reverse().join('/') %> al <%- datos.periodo.HASTA.split('-').reverse().join('/') %></span>
-            <a href="#" class="ms-auto" data-bs-toggle="modal" data-bs-target="#modal-config">
-              <span class="nav-link-icon d-md-none d-lg-inline-block">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24">
-                  <path
-                    d="m10.475 20.575-.35-2.775q-.4-.1-1.05-.45t-1.225-.8l-2.525 1.075-1.525-2.7 2.2-1.65q-.075-.3-.1-.613-.025-.312-.025-.637 0-.275.037-.587L6 10.7 3.8 9.05 5.325 6.4 7.85 7.475q.5-.425 1.088-.762.587-.338 1.162-.538l.375-2.775h3.075l.35 2.8q.65.225 1.138.513.487.287 1.012.762L18.7 6.4l1.525 2.65L17.9 10.8q.075.35.1.625.025.275.025.575 0 .25-.025.537-.025.288-.1.713l2.275 1.675-1.55 2.7L16.05 16.5q-.5.45-1.012.762-.513.313-1.138.513l-.35 2.8Zm1.45-6.45q.9 0 1.525-.613.625-.612.625-1.512t-.625-1.525q-.625-.625-1.525-.625-.9 0-1.512.625Q9.8 11.1 9.8 12q0 .9.613 1.512.612.613 1.512.613Zm0-.625q-.625 0-1.062-.438-.438-.437-.438-1.062t.438-1.062q.437-.438 1.062-.438t1.063.438q.437.437.437 1.062t-.437 1.062q-.438.438-1.063.438ZM12 11.975Zm-1 7.95h1.95l.375-2.725q.75-.2 1.313-.525.562-.325 1.212-.95l2.5 1.075 1-1.675-2.225-1.65q.125-.45.163-.8.037-.35.037-.675 0-.375-.037-.688-.038-.312-.163-.737L19.4 8.85l-.975-1.675-2.6 1.075q-.4-.45-1.162-.9-.763-.45-1.363-.575L13 4.05h-2l-.275 2.725q-.775.15-1.375.475-.6.325-1.25.975l-2.5-1.05-1 1.675 2.175 1.625q-.125.325-.175.725-.05.4-.05.8 0 .375.05.738.05.362.15.737l-2.15 1.65 1 1.675 2.475-1.05q.6.625 1.213.962.612.338 1.387.513Z" />
-                </svg>
-              </span>
-            </a>
-          </div>
           <div class="row row-deck row-cards">
             <div class="col-4">
               <div class="card">
