--- a/src/views/admin/formularios/edit.ejs
+++ b/src/views/admin/formularios/edit.ejs
@@ -9,13 +9,39 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/validate.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../partials/header') %>
       <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
         <div class="page-wrapper">
+          <div class="page-header d-print-none">
+            <div class="container-xl">
+              <div class="row g-2 align-items-center">
+                <div class="col">
+                  <div class="page-pretitle">
+                    Modificar
+                  </div>
+                  <h2 class="page-title">
+                    Formulario
+                  </h2>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="page-body">
             <div class="container-xl">
               <div class="row">
@@ -23,17 +49,13 @@
                   <div class="card">
                     <form action="" id="upd" method="POST" onsubmit="return validate();">
                       <input type="hidden" name="idform" value="<%= datos.formulario.IDFORM %>">
-                      <div class="card-header">
-                        <h3 class="card-title">Formulario</h3>
-                      </div>
                       <div class="card-body">
                         <div class="row">
                           <div class="col-2">
                             <div class="mb-1">
                               <div class="input-control">
                                 <label class="form-label required">NIF/NIE</label>
-                                <input type="text" name="nifcon" id="nifcon" class="form-control"
-                                  style="text-transform: uppercase;" value="<%- datos.formulario.NIFCON %>" autofocus />
+                                <input type="text" name="nifcon" id="nifcon" class="form-control text-uppercase" value="<%- datos.formulario.NIFCON %>" autofocus />
                                 <div class="invalid-feedback"></div>
                               </div>
                             </div>
@@ -42,8 +64,7 @@
                             <div class="mb-1">
                               <div class="input-control">
                                 <label class="form-label required">Nombre</label>
-                                <input type="text" name="nomcon" id="nomcon" class="form-control"
-                                  style="text-transform: uppercase;" value="<%- datos.formulario.NOMCON %>" />
+                                <input type="text" name="nomcon" id="nomcon" class="form-control text-uppercase" value="<%- datos.formulario.NOMCON %>" />
                                 <div class="invalid-feedback"></div>
                               </div>
                             </div>
@@ -61,7 +82,6 @@
                               <div class="input-control">
                                 <div class="form-label required">Tipo</div>
                                 <select class="form-select form-control" id="cbotip" name="tipfor" value="<%- datos.formulario.TIPFOR %>">
-                                  <option value="0">SELECCIONE UN TIPO</option>
                                   <% datos.tipos.map(element=> { %>
                                     <option value="<%- element.IDTIPO %>" <%- element.IDTIPO===datos.formulario.TIPFOR ? "selected" :"" %>>
                                       <%- element.DESTIP %>
@@ -77,7 +97,6 @@
                               <div class="input-control">
                                 <div class="form-label required">Referencia</div>
                                 <select class="form-select form-control" id="cboref" name="reffor" value="<%- datos.formulario.REFFOR %>">
-                                  <option value="0">SELECCIONE UNA REFERENCIA</option>
                                   <% datos.cargas.map(element=> { %>
                                     <option value="<%- element.REFCAR %>" <%- element.REFCAR===datos.formulario.REFFOR ? "selected" :"" %>>
                                       <%- element.REFCAR %>
@@ -154,7 +173,7 @@
                       </div>
                       <div class="card-footer text-end">
                         <div class="d-flex">
-                          <input class="btn btn-white" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Cancelar" />
+                          <a href="/admin/formularios" class="btn btn-white">Cancelar</a>
                           <button type="submit" class="btn btn-success ms-auto" id="btnUpdate">Actualizar formulario</button>
                         </div>
                       </div>
@@ -168,8 +187,8 @@
         <%- include('../../partials/footer') %>
   </div>
 
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/addEditFormulario.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/formularios/addEdit.js"></script>
   <script>
     const elemAdd = document.getElementById('upd');
     elemAdd.setAttribute('action', `/admin/formularios/update?part=${getCookie('filtro')}`)
