--- a/src/views/admin/historicos/edit.ejs
+++ b/src/views/admin/historicos/edit.ejs
@@ -5,139 +5,161 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Históricos</title>
+  <title>Historico</title>
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/validate.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../partials/header') %>
-    <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
+    <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION'}) %>
     <div class="page-wrapper">
-      <div class="page-body">
+      <div class="page-header d-print-none">
         <div class="container-xl">
-          <div class="row">
-            <div class="col-12">
-              <div class="card mt-3">
-                <form action="#" id="upd" method="POST" onsubmit="return validate();">
-                  <input type="hidden" name="idusua" id="idusua" value="<%- datos.usuario.IDUSUA %>">
-                  <div class="card-header">
-                    <h3 class="card-title">Usuario Histórico</h3>
-                  </div>
-                  <div class="card-body">
-                    <div class="row">
-                      <div class="col-4">
-                        <div class="mb-1">
-                          <div class="input-control">
-                            <label class="form-label required">UserID</label>
-                            <input type="text" name="userid" id="userid" class="form-control"
-                              style="text-transform: lowercase;" value="<%- datos.usuario.USERID %>" readonly />
-                            <div class="invalid-feedback"></div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-8">
-                        <div class="mb-1">
-                          <div class="input-control">
-                            <label class="form-label required">Nombre</label>
-                            <input type="text" name="nomusu" id="nomusu" class="form-control"
-                              style="text-transform: uppercase;" value="<%- datos.usuario.NOMUSU %>" readonly />
-                            <div class="invalid-feedback"></div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-10">
-                        <div class="mb-1">
-                          <div class="input-control">
-                            <label class="form-label required">Correo electrónico</label>
-                            <input type="text" name="emausu" id="emausu" class="form-control"
-                              value="<%- datos.usuario.EMAUSU %>" autofocus/>
-                            <div class="invalid-feedback"></div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-2">
-                        <div class="mb-1">
-                          <div class="input-control">
-                            <label class="form-label required">Teléfono</label>
-                            <input type="text" name="telusu" id="telusu" class="form-control"
-                              value="<%- datos.usuario.TELUSU %>" />
-                            <div class="invalid-feedback"></div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-4">
-                        <div class="mb-1">
-                          <div class="form-label">Oficina</div>
-                          <select class="form-select form-control" id="cboofi" name="ofiusu"
-                            value="<%- datos.usuario.OFIUSU %>">
-                            <% datos.oficinas.map(element => { %>
-                            <option value="<%- element.IDOFIC %>"
-                              <%- element.IDOFIC === datos.usuario.OFIUSU ? " selected" : "" %>>
-                              <%- element.DESOFI %>
-                            </option>
-                            <% }) %>
-                          </select>
-                        </div>
-                      </div>
-                      <div class="col-4">
-                        <div class="mb-1">
-                          <div class="form-label">Rol</div>
-                          <select class="form-select form-control" id="cborol" name="rolusu"
-                            value="<%- datos.usuario.ROLUSU %>">
-                            <% datos.filteredRol.map(element=> { %>
-                            <option value="<%- element.id %>"
-                              <%- element.id === datos.usuario.ROLUSU ? " selected" :"" %>>
-                              <%- element.des %>
-                            </option>
-                            <% }) %>
-                          </select>
-                        </div>
-                      </div>
-                      <div class="col-4">
-                        <div class="mb-1">
-                          <div class="form-label">Perfil</div>
-                          <select class="form-select form-control" id="cboper" name="perusu"
-                            value="<%- datos.usuario.PERUSU %>">
-                            <% datos.arrTiposPerfil.map(element=> { %>
-                            <option value="<%= element.id %>"
-                              <%- element.id === datos.usuario.PERUSU ? " selected" :"" %>>
-                              <%- element.des %>
-                            </option>
-                            <% }) %>
-                          </select>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card-footer text-end">
-                    <div class="d-flex">
-                      <input class="btn btn-white" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Cancelar" />
-                      <button type="submit" class="btn btn-success ms-auto" id="btnUpdate">Actualizar histórico</button>
-                    </div>
-                  </div>
-                </form>
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Modificar
               </div>
+              <h2 class="page-title">
+                Histórico
+              </h2>
             </div>
           </div>
         </div>
       </div>
+      <div class="page-body">
+        <div class="container-xl">
+          <div class="row">
+            <div class="card mt-3">
+              <form action="#" id="upd" method="POST" onsubmit="return validate();">
+                <input type="hidden" name="idusua" id="idusua" value="<%- datos.historico.IDUSUA %>">
+                <input type="hidden" name="userid" id="userid" value="<%- datos.historico.USERID %>">
+                <input type="hidden" name="nomusu" id="nomusu" value="<%- datos.historico.NOMUSU %>">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label">UserID</label>
+                          <input type="text" class="form-control" value="<%- datos.historico.USERID %>" disabled/>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-8">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label">Nombre</label>
+                          <input type="text" class="form-control" value="<%- datos.historico.NOMUSU %>" disabled/>
+                        </div>
+                      </div>
+                    </div>                  
+                  </div>
+                  <div class="row">
+                    <div class="col-10">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Correo electrónico</label>
+                          <input type="text" name="emausu" id="emausu" class="form-control" value="<%- datos.historico.EMAUSU %>" />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-2">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Teléfono</label>
+                          <input type="text" name="telusu" id="telusu" class="form-control" value="<%- datos.historico.TELUSU %>" />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <div class="form-label">Oficina</div>
+                          <select class="form-select" id="cboofi" name="ofiusu" value="<%- datos.historico.OFIUSU %>">
+                            <% datos.oficinas.map(element => { %>
+                              <option value="<%- element.IDOFIC %>"
+                                <%- element.IDOFIC === datos.historico.OFIUSU ? " selected" : "" %>>
+                                <%- element.DESOFI %>
+                              </option>
+                            <% }) %>
+                          </select>
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <div class="form-label">Rol</div>
+                          <select class="form-select" id="cborol" name="rolusu" value="<%- datos.historico.ROLUSU %>">
+                            <% datos.filteredRol.map(element => { %>
+                              <option value="<%- element.id %>"
+                                <%- element.id === datos.historico.ROLUSU ? " selected":"" %>>
+                                <%= element.des %>
+                              </option>
+                            <% }) %>
+                          </select>
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <div class="form-label">Perfil</div>
+                          <select class="form-select" id="cboper" name="perusu" value="<%- datos.historico.PERUSU %>">
+                            <% datos.arrTiposPerfil.map(element=> { %>
+                              <option value="<%= element.id %>"
+                                <%- element.id === datos.historico.PERUSU ? " selected" :"" %>>
+                                <%- element.des %>
+                              </option>
+                              <% }) %>                           
+                          </select>
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-footer text-end">
+                  <div class="d-flex">
+                    <a href="/admin/historicos" class="btn btn-white">Cancelar</a>
+                    <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar historico</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <%- include('../../partials/footer') %>
     </div>
-    <%- include('../../partials/footer') %>
   </div>
 
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/editHistorico.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/historicos/edit.js"></script>
   <script>
     const elemUpd = document.getElementById('upd');
     elemUpd.setAttribute('action', `/admin/historicos/update?part=${getCookie('filtro')}`)
   </script>
 </body>
-
 </html>
