--- a/src/views/admin/historicos/index.ejs
+++ b/src/views/admin/historicos/index.ejs
@@ -1,60 +1,85 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Históricos</title>
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
-    <!-- styles -->
-    <link rel="stylesheet" href="/css/styles.css">
-  </head>
-  <body class="antialiased">
-    <div class="wrapper">
-      <%- include('../../partials/header') %>
-      <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION'}) %>
-      <div class="page-wrapper">
-        <div class="page-body">
-          <div class="container-xl">
-            <div class="row">
-              <div class="col-12">
-                <div class="card">
-                  <div class="card-header">
-                    <h3 class="card-title">Históricos</h3>
-                    <div class="col-auto ms-auto">
-                      <div class="d-flex">
-                        <form action="/admin/historicos" method="GET">
-                          <div class="input-icon">
-                            <span class="input-icon-addon">
-                              <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
-                                stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <circle cx="10" cy="10" r="7"></circle>
-                                <line x1="21" y1="21" x2="15" y2="15"></line>
-                              </svg>
-                            </span>
-                            <input type="text" class="form-control d-inline-block me-3" id="buscarUserBox" name="part" placeholder="Buscar..."
-                              aria-label="Buscar en Históricos">
-                          </div>
-                        </form>
-                      </div>
-                    </div>                    
-                  </div>
-                  <div class="card-body">
-                    <table class="table table-vcenter table-striped sortable" id="tblUsuarios">
-                      <thead>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Históricos</title>
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+  <!-- styles -->
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/dots-menu.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/table.css">
+  <link rel="stylesheet" href="/css/pagination.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">  
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/modal.css">
+</head>
+
+<body>
+  <div class="page">
+    <%- include('../../partials/header') %>
+    <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION'}) %>
+    <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Aplicación Oporrak
+              </div>
+              <h2 class="page-title">
+                Históricos
+              </h2>
+            </div>
+            <div class="col-auto ms-auto d-print-none">
+              <form action="/admin/historicos" method="GET">
+                <div class="input-icon">
+                  <span class="input-icon-addon">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
+                      viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                      stroke-linecap="round" stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <circle cx="10" cy="10" r="7"></circle>
+                      <line x1="21" y1="21" x2="15" y2="15"></line>
+                    </svg>
+                  </span>
+                  <input type="text" class="form-control d-inline-block me-3" id="buscarHistBox" name="part"
+                    placeholder="Buscar..." aria-label="Buscar en históricos">
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="page-body">
+        <div class="container-xl">
+          <div class="row">
+            <div class="col-12">
+              <div class="card card-md">
+                <div class="card-body">
+                  <table class="table table-vcenter table-striped sortable" id="tblHistoricos">
+                    <thead>
                       <tr class="header">
                         <th class="w-4"></th>
                         <th>Nombre</th>
-                        <th class="w-4"></th>
+                        <th class="w-5"></th>
                       </tr>
-                      </thead>
-                      <tbody id="table-body">
-                      </tbody>
-                    </table>
-                    <div id="pagination-wrapper" class="py-1"></div>
-                  </div>
-                </div>                
+                    </thead>
+                    <tbody id="table-body">
+                    </tbody>
+                  </table>
+                  <div id="pagination-wrapper" class="nav py-1"></div>
+                </div>
               </div>
             </div>
           </div>
@@ -62,84 +87,55 @@
       </div>
       <%- include('../../partials/footer') %>
     </div>
-    
-    <div class="modal modal-blur fade" id="modal-activar" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          <div class="modal-status bg-success"></div>
-          <div class="modal-body text-center py-4">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-green icon-lg" width="24" height="24"
-                  viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                  stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                  <circle cx="12" cy="12" r="9"></circle>
-                  <path d="M9 12l2 2l4 -4"></path>
-                </svg>
-                <h3>Activar usuario</h3>
-                <div id="msgact"></div>
-              </div>
-              <div class="modal-footer">
-                <div class="w-100">
-                  <div class="row">
-                    <div class="col">
-                      <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
-                    </div>
-                    <div class="col">
-                      <form action="#" method="POST" id="activ" onsubmit="return validate();">
-                        <input type="hidden" id="idusua" name="idusua" value="">
-                      	<button type="submit" class="btn btn-success w-100">Activar usuario</button>
-		                  </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
+  </div>
+
+  <div class="modal modal-blur fade" id="modal-activar" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal-status bg-primary"></div>
+        <div class="modal-body text-center py-4">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-primary icon-lg" width="24" height="24"
+            viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M12 9v2m0 4v.01"></path>
+            <path d="M5 19h14a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-7.1 12.25a2 2 0 0 0 1.75 2.75"></path>
+          </svg>
+          <h3>¿Desea activar este histórico?</h3>
+          <div id="msgact"></div>
+          <div class="text-secondary">Los datos se actualizan en la base de datos Usuarios.</div>
         </div>
-      </div>
-    </div>
-    <div class="modal modal-blur fade" id="modal-borrar" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          <div class="modal-status bg-danger"></div>
-          <div class="modal-body text-center py-4">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-danger icon-lg" width="24" height="24"
-              viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-              stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M12 9v2m0 4v.01"></path>
-              <path d="M5 19h14a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-7.1 12.25a2 2 0 0 0 1.75 2.75"></path>
-            </svg>
-            <h3>¿Desea borrar este usuario?</h3>
-            <div id="msgbor"></div>
-            <div class="text-muted">Lo que vas a hacer no puede ser recuperado.</div>
-          </div>
-          <div class="modal-footer">
-            <div class="w-100">
-              <div class="row">
-                <div class="col">
-                  <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
-                </div>
-                <div class="col">
-                  <form action="#" id="del" method="POST">
-                    <input type="hidden" id="delusu" name="idusua" value="">
-                    <button type="submit" class="btn btn-danger w-100" id="btnUpdate">Borrar usuario</button>
-                  </form>
-                </div>
+        <div class="modal-footer">
+          <div class="w-100">
+            <div class="row">
+              <div class="col">
+                <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
+              </div>
+              <div class="col">
+                <form action="#" id="activ" method="POST">
+                  <input type="hidden" id="idusua" name="idusua" value="">
+                  <button type="submit" class="btn btn-danger w-100" id="btnUpdate">Activar histórico</button>
+                </form>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script>
-      const orgList = <%- JSON.stringify(datos.usuarios) %>
-      const cursor = <%- JSON.stringify(datos.cursor) %>
-      const hasNexts = <%- datos.hasNexts %>
-      const hasPrevs = <%- datos.hasPrevs %>
-    </script>
-    <script src="/js/ayuda.min.js"></script>
-    <script src="/js/admin/indexHistoricos.min.js"></script>
-  </body>
+  <script>
+    const hasNexts = <%- datos.hasNextUsers %>
+  </script>
+  <script>
+    const hasPrevs = <%- datos.hasPrevUsers %>
+  </script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/historicos/index.js"></script>
+  <script>
+    buildTable(<%- JSON.stringify(datos.historicos) %>, <%- JSON.stringify(datos.cursor) %>)
+  </script>
+</body>
+
 </html>
