--- a/src/views/admin/oficinas/edit.ejs
+++ b/src/views/admin/oficinas/edit.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -9,67 +9,77 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/validate.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../partials/header') %>
     <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION'}) %>
     <div class="page-wrapper">
       <div class="page-body">
         <div class="container-xl">
           <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
-              <div class="card mt-3">            
-                <form action="#" id="upd" method="POST" onsubmit="return validate();">
-                  <input type="hidden" id="idofic" name="idofic" value="<%- datos.oficina.IDOFIC %>">
-                  <div class="card-header">
-                    <h3 class="card-title">Oficina</h3>
-                  </div>
-                  <div class="card-body">
-                    <div class="row">
-                      <div class="col-8">
-                        <div class="mb-1">
-                          <div class="input-control">
-                            <label class="form-label required">Descripción</label>
-                            <input type="text" name="desofi" id="desofi" class="form-control" style="text-transform: uppercase;" value="<%- datos.oficina.DESOFI %>" autofocus/>
-                            <div class="invalid-feedback"></div>
-                          </div>
+            <div class="card mt-3">
+              <form action="#" id="upd" method="POST" onsubmit="return validate();">
+                <input type="hidden" name="idofic" id="idofic" value="<%- datos.oficina.IDOFIC %>">
+                <div class="card-header">
+                  <h3 class="card-title">Oficina</h3>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-2">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Código</label>
+                          <input type="text" name="codofi" id="codofi" class="form-control text-uppercase" value="<%- datos.oficina.CODOFI %>" readonly />
+                          <div class="invalid-feedback"></div>
                         </div>
                       </div>
-                      <div class="col-4">
-                        <div class="mb-1">
-                          <div class="input-control">
-                            <label class="form-label required">Código</label>
-                            <input type="text" name="codofi" id="codofi" class="form-control" style="text-transform: uppercase;" value="<%- datos.oficina.CODOFI %>" />
-                            <div class="invalid-feedback"></div>
-                          </div>
+                    </div>
+                    <div class="col-10">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Descripción</label>
+                          <input type="text" name="desofi" id="desofi" class="form-control text-uppercase" value="<%- datos.oficina.DESOFI %>" autofocus />
+                          <div class="invalid-feedback"></div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="card-footer text-end">
-                    <div class="d-flex">
-                      <input class="btn btn-white" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Cancelar" />
-                      <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar oficina</button>
-                    </div>
+                </div>
+                <div class="card-footer text-end">
+                  <div class="d-flex">
+                    <a href="/admin/oficinas" class="btn btn-white">Cancelar</a>
+                    <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar oficina</button>
                   </div>
-                </form>
-              </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
+      <%- include('../../partials/footer') %>
     </div>
-    <%- include('../../partials/footer') %>
   </div>
 
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/addEditOficina.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/oficinas/addEdit.js"></script>
   <script>
     const elemUpd = document.getElementById('upd');
     elemUpd.setAttribute('action', `/admin/oficinas/update?part=${getCookie('filtro')}`)
   </script>
 </body>
+
 </html>
