--- a/src/views/admin/tipos/add.ejs
+++ b/src/views/admin/tipos/add.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -8,55 +9,88 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
-  </head>
-
-  <body class="antialiased">
-    <div class="wrapper">
-      <%- include('../../partials/header') %>
-      <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION'}) %>
-      <div class="page-wrapper">
-        <div class="page-body">
-          <div class="container-xl">
-            <div class="row">
-              <div class="col-12">
-                <div class="card">
-                  <form action="" id="add" method="POST" onsubmit="return validate();">
-                    <div class="card-header">
-                      <h3 class="card-title">Tipo</h3>
-                    </div>
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-12">
-                          <div class="mb-1">
-                            <div class="input-control">                              
-                              <label class="form-label required">Descripción</label>
-                              <input type="text" name="destip" id="destip" class="form-control" value="" style="text-transform: uppercase;" autofocus/>
-                              <div class="invalid-feedback"></div>
-                            </div>
-                          </div>
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/validate.css">
+</head>
+<body>
+  <div class="page">
+    <%- include('../../partials/header') %>
+    <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION'}) %>
+    <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Crear
+              </div>
+              <h2 class="page-title">
+                Tipo
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="page-body">
+        <div class="container-xl">
+          <div class="row">
+            <div class="card mt-3">
+              <form action="#" id="add" method="POST" onsubmit="return validate();">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-2">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Código</label>
+                          <input type="text" name="codtip" id="codtip" class="form-control text-uppercase"
+                            style="text-transform: lowercase;" value="" autofocus />
+                          <div class="invalid-feedback"></div>
                         </div>
                       </div>
                     </div>
-                    <div class="card-footer text-end">
-                      <div class="d-flex">
-                      <input class="btn btn-white" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Volver" />
-                        <button type="submit" class="btn btn-primary ms-auto" id="btnInsert">Crear nuevo tipo</button>
+                    <div class="col-10">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Descripción</label>
+                          <input type="text" name="destip" id="destip" class="form-control text-uppercase"
+                            style="text-transform: uppercase;" value="" />
+                          <div class="invalid-feedback"></div>
+                        </div>
                       </div>
                     </div>
-                  </form>
+                  </div>
                 </div>
-              </div>
+                <div class="card-footer text-end">
+                  <div class="d-flex">
+                    <a href="/admin/tipos" class="btn btn-white">Cancelar</a>
+                    <button type="submit" class="btn btn-primary ms-auto" id="btnInsert">Crear nuevo tipo</button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
       <%- include('../../partials/footer') %>
     </div>
-    <script src="/js/ayuda.min.js"></script>
-    <script src="/js/admin/addEditTipo.min.js"></script>
+  </div>
+
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/tipos/addEdit.js"></script>
   <script>
-    const elemUpd = document.getElementById('add');
-    elemUpd.setAttribute('action', `/admin/tipos/insert?part=${getCookie('filtro')}`)
+    const elemAdd = document.getElementById('add');
+    elemAdd.setAttribute('action', `/admin/tipos/insert?part=${getCookie('filtro')}`)
   </script>
-  </body>
+</body>
+
 </html>
