--- a/src/views/admin/tipos/edit.ejs
+++ b/src/views/admin/tipos/edit.ejs
@@ -9,57 +9,88 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/validate.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../partials/header') %>
     <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION'}) %>
     <div class="page-wrapper">
-      <div class="page-body">
+      <div class="page-header d-print-none">
         <div class="container-xl">
-          <div class="row">
-            <div class="col-12">
-              <div class="card">                 
-                <form action="" id="upd" method="POST" onsubmit="return validate();">
-                  <input type="hidden" name="idtipo" id="idtipo" value = <%- datos.tipo.IDTIPO %>>
-                  <div class="card-header">
-                    <h3 class="card-title">Tipo</h3>
-                  </div>
-                  <div class="card-body">
-                    <div class="row">
-                      <div class="col-12">
-                        <div class="mb-1">
-                          <div class="input-control">                            
-                            <label class="form-label required">Descripción</label>
-                            <input type="text" name="destip" id="destip" class="form-control" value="<%- datos.tipo.DESTIP %>" style="text-transform: uppercase;" autofocus/>
-                            <div class="invalid-feedback"></div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card-footer text-end">
-                    <div class="d-flex">
-                      <input class="btn btn-white" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Volver" />
-                      <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar tipo</button>
-                    </div>
-                  </div>
-                </form>
-              </div>                
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Modificar
+              </div>
+              <h2 class="page-title">
+                Tipo
+              </h2>
             </div>
           </div>
         </div>
       </div>
+      <div class="page-body">
+        <div class="container-xl">
+          <div class="row">
+            <div class="card mt-3">
+              <form action="#" id="upd" method="POST" onsubmit="return validate();">
+                <input type="hidden" name="idtipo" id="idtipo" value="<%- datos.tipo.IDTIPO %>">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-2">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Código</label>
+                          <input type="text" name="codtip" id="codtip" class="form-control text-uppercase" value="<%- datos.tipo.CODTIP %>" readonly />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-10">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Descripción</label>
+                          <input type="text" name="destip" id="destip" class="form-control text-uppercase" value="<%- datos.tipo.DESTIP %>" autofocus />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-footer text-end">
+                  <div class="d-flex">
+                    <a href="/admin/tipos" class="btn btn-white">Cancelar</a>
+                    <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar tipo</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <%- include('../../partials/footer') %>
     </div>
-    <%- include('../../partials/footer') %>
   </div>
 
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/addEditTipo.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/tipos/addEdit.js"></script>
   <script>
     const elemUpd = document.getElementById('upd');
     elemUpd.setAttribute('action', `/admin/tipos/update?part=${getCookie('filtro')}`)
   </script>
 </body>
+
 </html>
