--- a/src/views/admin/usuarios/add.ejs
+++ b/src/views/admin/usuarios/add.ejs
@@ -9,29 +9,51 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/validate.css">
 </head>
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../partials/header') %>
     <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
     <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Nuevo
+              </div>
+              <h2 class="page-title">
+                Usuarios
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="page-body">
         <div class="container-xl">
           <div class="row">
             <div class="col-12">
               <div class="card mt-3">
                 <form action="#" id="add" method="POST" onsubmit="return validate();">
-                  <div class="card-header">
-                    <h3 class="card-title">Usuario</h3>
-                  </div>
                   <div class="card-body">
                     <div class="row">
                       <div class="col-2">
                         <div class="mb-1">
                           <div class="input-control">
                             <label class="form-label required">UserID</label>
-                            <input type="text" name="userid" id="userid" class="form-control"
-                              style="text-transform: lowercase;" value="" autofocus />
+                            <input type="text" name="userid" id="userid" class="form-control text-lowecase" value="" autofocus />
                             <div class="invalid-feedback"></div>
                           </div>
                         </div>
@@ -40,8 +62,7 @@
                         <div class="mb-1">
                           <div class="input-control">
                             <label class="form-label required">Nombre</label>
-                            <input type="text" name="nomusu" id="nomusu" class="form-control"
-                              style="text-transform: uppercase;" value="" />
+                            <input type="text" name="nomusu" id="nomusu" class="form-control text-uppercase" value="" />
                             <div class="invalid-feedback"></div>
                           </div>
                         </div>
@@ -51,7 +72,7 @@
                           <div class="input-control">
                             <div class="form-label required">Estado</div>
                             <select class="form-select form-control" id="cboest" name="stausu" value="">
-                              <option value="">SELECCIONE ESTADO</option>
+                              <option value="-1">SELECCIONE ESTADO</option>
                               <% datos.arrEstadosUsuario.map(element=> { %>
                               <option value="<%= element.id %>">
                                 <%= element.des %>
@@ -136,8 +157,8 @@
                   </div>
                   <div class="card-footer text-end">
                     <div class="d-flex">
-                      <input class="btn btn-white" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Cancelar" />
-                      <button type="submit" class="btn btn-success ms-auto" id="btnInsert">Crear nuevo usuario</button>
+                      <a href="/admin/usuarios" class="btn btn-white">Cancelar</a>
+                      <button type="submit" class="btn btn-primary ms-auto" id="btnInsert">Crear nuevo usuario</button>
                     </div>
                   </div>
                 </form>
@@ -146,11 +167,11 @@
           </div>
         </div>
       </div>
+      <%- include('../../partials/footer') %>
     </div>
-    <%- include('../../partials/footer') %>
   </div>
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/addEditUsuario.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/usuarios/addEdit.js"></script>
   <script>
     const elemAdd = document.getElementById('add');
     elemAdd.setAttribute('action', `/admin/usuarios/insert?part=${getCookie('filtro')}`)
