--- a/src/views/admin/usuarios/edit.ejs
+++ b/src/views/admin/usuarios/edit.ejs
@@ -9,13 +9,39 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/validate.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../partials/header') %>
     <%- include('../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
     <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Modificar
+              </div>
+              <h2 class="page-title">
+                Usuarios
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="page-body">
         <div class="container-xl">
           <div class="row">
@@ -23,16 +49,13 @@
               <div class="card mt-3">
                 <form action="#" id="upd" method="POST" onsubmit="return validate();">
                   <input type="hidden" name="idusua" id="idusua" value="<%- datos.usuario.IDUSUA %>">
-                  <div class="card-header">
-                    <h3 class="card-title">Usuario</h3>
-                  </div>
                   <div class="card-body">
                     <div class="row">
                       <div class="col-2">
                         <div class="mb-1">
                           <div class="input-control">
                             <label class="form-label required">UserID</label>
-                            <input type="text" name="userid" id="userid" class="form-control" style="text-transform: lowercase;" value="<%- datos.usuario.USERID %>" readonly />
+                            <input type="text" name="userid" id="userid" class="form-control text-lowecase" value="<%- datos.usuario.USERID %>" readonly />
                             <div class="invalid-feedback"></div>
                           </div>
                         </div>
@@ -41,8 +64,7 @@
                         <div class="mb-1">
                           <div class="input-control">
                             <label class="form-label required">Nombre</label>
-                            <input type="text" name="nomusu" id="nomusu" class="form-control"
-                              style="text-transform: uppercase;" value="<%- datos.usuario.NOMUSU %>" autofocus />
+                            <input type="text" name="nomusu" id="nomusu" class="form-control text-uppercase" value="<%- datos.usuario.NOMUSU %>" autofocus />
                             <div class="invalid-feedback"></div>
                           </div>
                         </div>
@@ -131,8 +153,8 @@
                   </div>
                   <div class="card-footer text-end">
                     <div class="d-flex">
-                      <input class="btn btn-white" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Cancelar" />
-                      <button type="submit" class="btn btn-success ms-auto" id="btnUpdate">Actualizar usuario</button>
+                      <a href="/admin/usuarios" class="btn btn-white">Cancelar</a>
+                      <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar usuario</button>
                     </div>
                   </div>
                 </form>
@@ -141,12 +163,12 @@
           </div>
         </div>
       </div>
+      <%- include('../../partials/footer') %>
     </div>
-    <%- include('../../partials/footer') %>
   </div>
 
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/addEditUsuario.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/usuarios/addEdit.js"></script>
   <script>
     const elemUpd = document.getElementById('upd');
     elemUpd.setAttribute('action', `/admin/usuarios/update?part=${getCookie('filtro')}`)
