--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,9 +1,23 @@
 <footer class="footer footer-transparent d-print-none">
-  <div class="container">
+  <div class="container-xl">
     <div class="row text-center align-items-center flex-row-reverse">
+      <div class="col-lg-auto ms-lg-auto">
+        <ul class="list-inline list-inline-dots mb-0">
+          <li class="list-inline-item"><a href="/" class="link-secondary" rel="noopener">Ayuda</a></li>
+          <li class="list-inline-item"><a href="/" class="link-secondary">Guregida</a></li>
+        </ul>
+      </div>
       <div class="col-12 col-lg-auto mt-3 mt-lg-0">
-        Copyright &copy; 2022
-        <a href="/" class="link-secondary">SIAC</a>
+        <ul class="list-inline list-inline-dots mb-0">
+          <li class="list-inline-item">
+            Copyright © 2024
+            <a href="/" class="link-secondary">SIAC</a>.
+            Para uso interno del Servicio de Información
+          </li>
+          <li class="list-inline-item">
+            v3.0.0
+          </li>
+        </ul>
       </div>
     </div>
   </div>
