--- a/src/views/user/formularios/referencias/edit.ejs
+++ b/src/views/user/formularios/referencias/edit.ejs
@@ -9,13 +9,39 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/validate.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../../partials/header') %>
     <%- include('../../../partials/navbar', {opcion: 'FORMULARIO'}) %>
     <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Modificar
+              </div>
+              <h2 class="page-title">
+                Referencia
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="page-body">
         <div class="container-xl">
           <div class="row">
@@ -24,16 +50,13 @@
                 <form action="" id="upd" method="POST" onsubmit="return validate();">
                   <input type="hidden" name="idform" id="idform" value="<%- datos.formulario.IDFORM %>">
                   <input type="hidden" name="idrefe" id="idrefe" value="<%- datos.referencia.IDREFE %>">
-                  <div class="card-header">
-                    <h3 class="card-title">Referencia</h3>
-                  </div>
                   <div class="card-body">
                     <div class="row">
                       <div class="col-4">
                         <div class="mb-1">
                           <div class="input-control">
                             <label class="form-label required">NIF/NIE</label>
-                            <input type="text" name="nifref" id="nifref" class="form-control" style="text-transform: uppercase;" value="<%- datos.referencia.NIFREF %>" autofocus/>
+                            <input type="text" name="nifref" id="nifref" class="form-control text-uppercase" value="<%- datos.referencia.NIFREF %>" autofocus/>
                             <div class="invalid-feedback"></div>
                           </div>
                         </div>
@@ -65,8 +88,8 @@
                   </div>
                   <div class="card-footer text-end">
                     <div class="d-flex">
-                      <input class="btn btn-white" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Cancelar" />
-                      <button type="submit" class="btn btn-success ms-auto" id="btnUpdate">Actualizar referencia</button>
+                      <a href="/user/formularios/referencias/<%- datos.formulario.IDFORM %>" class="btn btn-white">Cancelar</a>
+                      <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar referencia</button>
                     </div>
                   </div>
                 </form>
@@ -75,12 +98,12 @@
           </div>
         </div>
       </div>
+      <%- include('../../../partials/footer') %>
     </div>
-    <%- include('../../../partials/footer') %>
   </div>
 
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/user/addEditReferencia.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/user/formularios/referencias/addEdit.js"></script>
   <script>
     const elemAdd = document.getElementById('upd');
     elemAdd.setAttribute('action', `/user/formularios/referencias/update?part=${getCookie('filtro')}`)
