--- a/src/views/user/formularios/referencias/readonly.ejs
+++ b/src/views/user/formularios/referencias/readonly.ejs
@@ -9,32 +9,55 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/icon.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/validate.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../../partials/header') %>
     <%- include('../../../partials/navbar', {opcion: 'FORMULARIO' }) %>
     <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Lectura
+              </div>
+              <h2 class="page-title">
+                Referencias
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="page-body">
         <div class="container-xl">
           <div class="row">
             <div class="col-12">
               <div class="card">
-                <div class="card-header">
-                  <div>
-                    <h3 class="card-title">Referencias</h3>
-                  </div>
-                </div>
                 <div class="card-body">
                   <div class="list-group list-group-flush overflow-auto" style="max-height: 50vh">
                     <% datos.referencias.map(itm=> { %>
                       <div class="list-group-item py-1">
                         <div class="row">
                           <div class="col-auto">
-                            <span class="avatar avatar-rounded bg-green-lt">
-                              <h6>OK</h6>
-                            </span>
+                            <div class="align-items-center">
+                              <span class="avatar avatar-rounded bg-green-lt">
+                                <h6 class="m-0">OK</h6>
+                              </span>
+                            </div>
                           </div>
                           <div class="col text-truncate">
                             <span style="font-size: .7rem;">
@@ -53,7 +76,7 @@
                 </div>
                 <div class="card-footer">                  
                   <div class="ms-auto d-flex py-1">
-                    <input class="btn btn-primary" action="action" onclick="window.history.go(-1); return false;" type="submit" value="Volver" />
+                    <a href="/user/formularios/resueltos" class="btn btn-white">Volver</a>
                   </div>
                 </div>
               </div>
